<resources>
    <string name="app_name">SketchArt</string>
    <string name="play_button">Let\'s Draw</string>
    <string name="gallery_button">Gallery</string>
    <string name="settings_button">Settings</string>
    <string name="credits_button">Credits</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="game_logo">Game Logo</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="art">Art Image</string>
    <string name="inphamous_logo">inPHAMous Logo</string>
    <string name="background">Background Image</string>
    <string name="credits">Designer/Programmer: Cindy Pham</string>
    <string name="github">Github: https://github.com/phamcindy619</string>
    <string name="contact">Contact: cindy619mysterio@yahoo.com</string>
</resources>
